# samba-emergency-response-agents

./: README.md
backend/: evac_routes.json  event.json  event_impact_analysis.md  high_risk_places.json  image_analysis.md  impact_analysis.md  my_flow_plot.html  pyproject.toml  resource_deployment.md  safe_zones.json  streamlit_app.py  weather.json
backend/src/samba_emergency_response_agents/: crew.py  emergency_monitoring_crew.py  flow.py  high_risk_areas_search_crew.py  image_analysis_crew.py  impact_analysis_crew.py  main.py  types.py  weather_monitoring_crew.py
backend/src/samba_emergency_response_agents/config/: agents.yaml  high_risk_places_search_agents.yaml  high_risk_places_search_tasks.yaml  image_analysis_agents.yaml  image_analysis_tasks.yaml  impact_analysis_agents.yaml  impact_analysis_tasks.yaml  monitoring_agents.yaml  monitoring_tasks.yaml  resource_deployment_agents.yaml  resource_deployment_tasks.yaml  route_planning_agents.yaml  route_planning_tasks.yaml  safe_zones_agents.yaml  safe_zones_tasks.yaml  tasks.yaml  weather_agents.yaml  weather_tasks.yaml
backend/src/samba_emergency_response_agents/tools/: custom_tool.py
frontend/: streamlit_app.py
src/samba_emergency_response_agents/: crew.py  main.py
src/samba_emergency_response_agents/config/: agents.yaml  tasks.yaml
