[project]
name = "samba_emergency_response_agents"
version = "0.1.0"
description = "samba-emergency-response-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0",
    "streamlit>=1.31.1,<2.0.0"
]

[project.scripts]
samba_emergency_response_agents = "samba_emergency_response_agents.main:run"
run_crew = "samba_emergency_response_agents.main:run"
train = "samba_emergency_response_agents.main:train"
replay = "samba_emergency_response_agents.main:replay"
test = "samba_emergency_response_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
